Fix nav element positioning and spacing

--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -62,7 +62,7 @@
 		.project-header {
 			display: grid;
 			width: 100%;
-			padding: 0 1.5rem;
+			padding: 9rem 1.5rem 0;
 
 			.project-heading {
 				font-size: 2.75rem;
