--- a/styles/style.css
+++ b/styles/style.css
@@ -162,7 +162,7 @@ ul {
   .grid .project-header {
     display: grid;
     width: 100%;
-    padding: 0 1.5rem;
+    padding: 9rem 1.5rem 0;
   }
   .grid .project-header .project-heading {
     font-size: 2.75rem;
